--- a/DLTE-FrontEnd/DLTE-FE-001-HTMLComponents.html
+++ b/DLTE-FrontEnd/DLTE-FE-001-HTMLComponents.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     Hello Guys
-    iuft viujnyttrrfghuijkmoim
+    "Welcome aboard! Prepare to embark on an adventure of discovery and learning. Let's navigate through the vast sea of knowledge together!"
     <p>Lets make biriyani</p>
 </body>
 </html>
