--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1359-FE-HTML-BootstrapAlign/bootstrap.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1359-FE-HTML-BootstrapAlign/bootstrap.html
@@ -12,20 +12,50 @@
 <div class="container">
     <h2 class="text-center">Logo Gallery</h2>
     <div class="row">
+        <!-- Large screens: All logos in the same row -->
         <div class="col-lg-3 col-md-3 col-sm-6 col-12">
             <img src="logo1.jpg" class="img-fluid" alt="Logo">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+            <img src="logof.png" class="img-fluid" alt="Logo">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-12">
             <img src="logo1.jpg" class="img-fluid" alt="Logo">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+            <img src="logof.png" class="img-fluid" alt="Logo">
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Medium screens: 2x2 grid -->
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+            <img src="logof.png" class="img-fluid" alt="Logo">
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <img src="logo1.jpg" class="img-fluid" alt="Logo">
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+            <img src="logof.png" class="img-fluid" alt="Logo">
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <img src="logo1.jpg" class="img-fluid" alt="Logo">
         </div>
+    </div>
+
+    <div class="row">
+         <!-- Small screens: Each logo in its own row -->
+        <div class="row justify-content-center mb-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+            <img class="img-fluid" src="logof.png" alt="savings">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+            <img class="img-fluid" src="logo1.jpg" alt="creditCard">
+            </div>
+            </div>
     </div>
 </div>
 
 </body>
 </html>
+
