--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/schemeSlides.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/schemeSlides.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Schemes</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+    body {
+        background-color: #59bdd1;
+    }
+    </style>
+    
 </head>
 <body>
 
