--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/table.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/table.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display Details</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"rel="stylesheet">
     <style>
         body {
-            background-color: #5ed0f0;
+            background-color: #59bdd1;
         }
 
         .container {
@@ -61,6 +66,7 @@
                 <th scope="col">Customer Name</th>
                 <th scope="col">Email</th>
                 <th scope="col">Phone Number</th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -70,6 +76,14 @@
                 <td>Medhini Shetty</td>
                 <td>medh@gmail.com</td>
                 <td>7755124969</td>
+                <td>
+                    <button type="button" class="btn btn-success btn-sm">
+                    <i class="fas fa-check"></i>
+                    </button>
+                    <button type="button" class="btn btn-danger btn-sm">
+                    <i class="fas fa-times"></i>
+                    </button>
+                </td>
             </tr>
             <tr>
                 <th scope="row">2</th>
@@ -77,6 +91,14 @@
                 <td>Meghana Shetty</td>
                 <td>Megha@gmail.com</td>
                 <td>8855669239</td>
+                <td>
+                    <button type="button" class="btn btn-success btn-sm">
+                    <i class="fas fa-check"></i>
+                    </button>
+                    <button type="button" class="btn btn-danger btn-sm">
+                    <i class="fas fa-times"></i>
+                    </button>
+                </td>
             </tr>
         </tbody>
     </table>
