--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1359-FE-HTML-BootstrapAlign/bootstrap.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1359-FE-HTML-BootstrapAlign/bootstrap.html
@@ -1,61 +1,43 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logo Gallery</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Logo Presentation with Bootstrap Breakpoints</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f4f4f4;
+        }
+        .logo-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+        }
+        @media (max-width: 768px) {
+            .logo-container {
+                margin-top: 20px;
+            }
+        }
+        @media (max-width: 576px) {
+            .logo-container {
+                margin-top: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
 
-<div class="container">
-    <h2 class="text-center">Logo Gallery</h2>
-    <div class="row">
-        <!-- Large screens: All logos in the same row -->
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-            <img src="logo1.jpg" class="img-fluid" alt="Logo">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-            <img src="logof.png" class="img-fluid" alt="Logo">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-            <img src="logo1.jpg" class="img-fluid" alt="Logo">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-            <img src="logof.png" class="img-fluid" alt="Logo">
-        </div>
-    </div>
-
-    <div class="row">
-        <!-- Medium screens: 2x2 grid -->
-        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-            <img src="logof.png" class="img-fluid" alt="Logo">
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-            <img src="logo1.jpg" class="img-fluid" alt="Logo">
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-            <img src="logof.png" class="img-fluid" alt="Logo">
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-            <img src="logo1.jpg" class="img-fluid" alt="Logo">
-        </div>
-    </div>
-
-    <div class="row">
-         <!-- Small screens: Each logo in its own row -->
-        <div class="row justify-content-center mb-3">
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-            <img class="img-fluid" src="logof.png" alt="savings">
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-            <img class="img-fluid" src="logo1.jpg" alt="creditCard">
-            </div>
-            </div>
+    <div class="row justify-content-around">
+        <img class="col-lg-3 col-md-6 col-12" src="logof.png" />
+        <img class="col-lg-3 col-md-6 col-12" src="logof.png" />
+        <img class="col-lg-3 col-md-6 col-12" src="logof.png" />
+        <img class="col-lg-3 col-md-6 col-12" src="logof.png" />
     </div>
 </div>
 
 </body>
 </html>
+
 
