--- a/DLTE-FinalProject/FrontEnd/Task-1478-FE-HTML-UIForProjectService1withJS/project.html
+++ b/DLTE-FinalProject/FrontEnd/Task-1478-FE-HTML-UIForProjectService1withJS/project.html
@@ -15,8 +15,8 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand text-white display-6 text-uppercase" style="font-weight: bold;" href="#">
-                <img src="image.png" alt="MyBank Logo" style="height: 100px;">
-                Menu
+                <img src="icon.png" alt="MyBank Logo" style="height: 100px;">
+                My Bank
             </a>
             <!-- Toggle button -->
             <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#mybankmenu">
