--- a/DLTE-FinalProject/FrontEnd/Task-1563-FE -AJAX-BuildUIforMyBankRestAPI/intruduce.html
+++ b/DLTE-FinalProject/FrontEnd/Task-1563-FE -AJAX-BuildUIforMyBankRestAPI/intruduce.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List all DebitCards</title>
+     <body style="background-color:powderblue;"></body>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -24,7 +25,7 @@
                 $("#domesticLimit").val("")
                 $("#internationalLimit").val("")
 
-            })
+            });
         
             $("#add").click(()=>{
                 const card = $("#debitCardNumber").val()
@@ -45,36 +46,32 @@
                     "debitCardStatus":status,
                     "domesticLimit":dlimit,
                     "internationalLimit":ilimit
-                }
-                console.log(JSON.stringify(request))
+                };
+
                 $.ajax({
-                    url:"http://localhost:8083/debitcard/activate/+card",
+                    url:"http://localhost:8083/debitcard/activate/3692468135796673",
                     type:"PUT",
                     dataType:"text",
                     beforeSend:function(handler){
-                        handler.setRequestHeader("Authorization","Basic "+sessionStorage.getItem("logged"))
+                        handler.setRequestHeader("Authorization","Basic "+ btoa("medhini121:pass"));
                     },
                     contentType:"application/json;charset=utf-8",
                     data:JSON.stringify(request),
                     success:function(response){
-                        alert(JSON.stringify(response))
-                        /*
                         let element = $("#status")
-                        element.append(`<h1>${response.loanName} has added</h1>`)*/
-                    },
-                    error:function(err){
-                        let element = $("#status")
-                        element.append(`<h1>${err.status}</h1>`)
+                        element.append(`<h1>Status updated successfully</h1>`)
                     }
-                })
-            })
-        })
+                });
+            });
+
+        });
     </script>
 </head>
 <body>
     <div class="container">
+        <h1 class="row justify-content-center">Debit card status update</h1>
         <div class="row justify-content-center">
-            <p id="status" class="display-6 text-center text-primary"></p>
+        <p id="status" class="display-6 text-center text-primary"></p>
             <div class="p-5 m-5 rounded-5 shadow">
                 <div class="form group">
                     <label>Debit Card Number</label>
