--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/checkBookForm.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/checkBookForm.html
@@ -7,7 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #59bdd1;
+            background-color: #031273;
         }
 
         .container {
