--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/table.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1402-FE-BootstrapChequeBookAppWithNavigation/table.html
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"rel="stylesheet">
     <style>
         body {
-            background-color: #59bdd1;
+            background-color: #031273;
         }
 
         .container {
