--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1561-FE-JQuery-Search&Pagination/project.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1561-FE-JQuery-Search&Pagination/project.html
@@ -30,7 +30,7 @@
                         <a href="./checkBookForm.html" class="btn btn-outline-light rounded-pill me-2 nav-link" style="font-weight: bold;">Forms</a>
                     </li>
                     <li class="nav-item">
-                        <a href="listCards.html" class="btn btn-outline-light rounded-pill me-2 nav-link" style="font-weight: bold;">Accounts</a>
+                        <a href="pajination.html" class="btn btn-outline-light rounded-pill me-2 nav-link" style="font-weight: bold;">Accounts</a>
                     </li>
                     <li class="nav-item">
                         <a href="./schemeSlides.html" class="btn btn-outline-light rounded-pill me-2 nav-link" style="font-weight: bold;">Deposits</a>
