--- a/DLTE-FinalProject/FrontEnd/Task-1478-FE-HTML-UIForProjectService1withJS/listCards.html
+++ b/DLTE-FinalProject/FrontEnd/Task-1478-FE-HTML-UIForProjectService1withJS/listCards.html
@@ -16,7 +16,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000;
+            background-color: #fff;
             color: #fff;
         }
 
@@ -26,17 +26,17 @@
             text-align: center;
             padding: 20px;
             border-radius: 10px;
-            background-color: #000;
-            box-shadow: 0 0 20px 5px rgba(255, 215, 0, 0.5);
+            background-color: #031273;
+            box-shadow: 0 0 20px 5px #1b22f448;
             animation: glow 2s infinite alternate;
         }
 
         @keyframes glow {
             from {
-                box-shadow: 0 0 20px 5px rgba(255, 215, 0, 0.5);
+                box-shadow: 0 0 20px 5px #1b22f448(255, 215, 0, 0.5);
             }
             to {
-                box-shadow: 0 0 30px 10px rgba(255, 215, 0, 0.8);
+                box-shadow: 0 0 30px 10px #1b22f448(255, 215, 0, 0.8);
             }
         }
 
@@ -59,7 +59,7 @@
 
         .search-button {
             padding: 10px 20px;
-            background-color: #ecd11e;
+            background-color: #fff;
             color: rgb(12, 12, 12);
             border: none;
             border-radius: 4px;
@@ -68,11 +68,11 @@
         }
 
         .card-info {
-            border: 1px solid #e7ee10;
+            border: 1px solid #fff;
             border-radius: 4px;
             padding: 20px;
-            background-color: #0c0c0c;
-            box-shadow: 0 4px 8px rgba(239, 210, 17, 0.745);
+            background-color: #031273;
+            box-shadow: 0 4px 8px #1b22f448(239, 210, 17, 0.745);
             display: none;
             text-align: left;
         }
