--- a/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1561-FE-JQuery-Search&Pagination/pajination.html
+++ b/DLTE-FrontEnd/DLTE-FrontEndTask/Task-1561-FE-JQuery-Search&Pagination/pajination.html
@@ -51,10 +51,41 @@
 <script>
     // Sample debit card data
     var debitCards = [
-        { cardNumber: '3692468135796673', domesticLimit: 50000 },
-        { cardNumber: '1234567890123456', domesticLimit: 50000 },
-        { cardNumber: '9876543210987654', domesticLimit: 30000 },
-        { cardNumber: '5432167890123456', domesticLimit: 100000 }
+        { cardNumber: '3692468135796673',
+          accountNumber: 78435876543530,
+          customerId: 123670,
+          debitCardCvv: 773,
+          debitCardPin: 6754,
+          debitCardExpiry: "05-APR-24",
+          debitCardStatus: "active",
+          domesticLimit: 50000 },
+
+        { cardNumber: '1234567890123456',
+          accountNumber: 88997866543530,
+          customerId: 123671,
+          debitCardCvv: 333,
+          debitCardPin: 4534,
+          debitCardExpiry: "03-APR-25",
+          debitCardStatus: "active",
+          domesticLimit: 50000 },
+
+        { cardNumber: '9876543210987654',
+          accountNumber: 78909876543530,
+          customerId: 123672,
+          debitCardCvv: 888,
+          debitCardPin: 8984,
+          debitCardExpiry: "03-APR-25",
+          debitCardStatus: "active",
+          domesticLimit: 30000 },
+
+        { cardNumber: '5432167890123456',
+          accountNumber: 78909876543530,
+          customerId: 123673,
+          debitCardCvv: 999,
+          debitCardPin: 7654,
+          debitCardExpiry: "03-APR-24",
+          debitCardStatus: "active",
+          domesticLimit: 100000 }
     ];
 
     var currentPage = 1;
