--- a/DLTE-JavaEE/Java-Task/1754-JSF-Collection-CRUD/src/main/webapp/index.xhtml
+++ b/DLTE-JavaEE/Java-Task/1754-JSF-Collection-CRUD/src/main/webapp/index.xhtml
@@ -5,6 +5,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h:body>
+    <!-- Add loan -->
 <f:view>
     <h:form>
         Loan Number: <h:inputText value="#{loans.loanNumber}" /><br/>
@@ -14,8 +16,9 @@
         Borrower Name: <h:inputText value="#{loans.borrowerName}" /><br/>
         Borrower Contact: <h:inputText value="#{loans.borrowerContact}" /><br/>
         <h:commandButton value="Add Loan" action="#{loans.addLoan(loans)}" />
-
     </h:form>
+
+    <!-- Display Loan -->
     <h:dataTable value="#{loans.closedLoans}" var="loan">
         <h:column>
             <f:facet name="header">Loan Number</f:facet>
@@ -46,7 +49,7 @@
     <h:form>
         Loan Number to Delete: <h:inputText value="#{loans.loanNumber}" var="nums" /><br/>
         <h:commandButton value="Delete Loan" action="#{loans.deleteLoan(nums)}" />
-        <p>My data #{loans.allLoans()}</p>
     </h:form>
 </f:view>
+</h:body>
 </html>
