--- a/DLTE-FinalProject/FrontEnd/Task-1563-FE -AJAX-BuildUIforMyBankRestAPI/restAJAX.html
+++ b/DLTE-FinalProject/FrontEnd/Task-1563-FE -AJAX-BuildUIforMyBankRestAPI/restAJAX.html
@@ -49,11 +49,11 @@
                 };
 
                 $.ajax({
-                    url:"http://localhost:8083/debitcard/activate/3692468135796673",
+                    url:"http://localhost:8083/debitcard/activate/3692468135796670",
                     type:"PUT",
                     dataType:"text",
                     beforeSend:function(handler){
-                        handler.setRequestHeader("Authorization","Basic "+ btoa("medhini121:pass"));
+                        handler.setRequestHeader("Authorization","Basic "+ btoa("medh6:password1"));
                     },
                     contentType:"application/json;charset=utf-8",
                     data:JSON.stringify(request),
